--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "/home/joss/platzi/ReactProyectos/curso-react-intro/build/"
 }
