--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/home/joss/platzi/ReactProyectos/curso-react-intro/build/"
+  "homepage": "https://jhosselyn11.github.io/"
 }
